src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) double cv_matchShapes_0(void* contour1, void* contour2, int method, double parameter);
extern "C" __declspec(dllexport) void cv_convexHull_0(void* points, void* hull, bool clockwise, bool returnPoints);
extern "C" __declspec(dllexport) void cv_convexityDefects_0(void* contour, void* convexhull, void* convexityDefects);
extern "C" __declspec(dllexport) bool cv_isContourConvex_0(void* contour);
extern "C" __declspec(dllexport) float cv_intersectConvexConvex_0(void* p1, void* p2, void* p12, bool handleNested);
extern "C" __declspec(dllexport) void* cv_fitEllipse_0(void* points);
extern "C" __declspec(dllexport) void* cv_fitEllipseAMS_0(void* points);
extern "C" __declspec(dllexport) void* cv_fitEllipseDirect_0(void* points);
extern "C" __declspec(dllexport) void cv_getClosestEllipsePoints_0(void* ellipse_params, void* points, void* closest_pts);
extern "C" __declspec(dllexport) void cv_fitLine_0(void* points, void* line, int distType, double param, double reps, double aeps);
extern "C" __declspec(dllexport) double cv_pointPolygonTest_0(void* contour, cv::Point2f pt, bool measureDist);
extern "C" __declspec(dllexport) int cv_rotatedRectangleIntersection_0(void* rect1, void* rect2, void* intersectingRegion);
extern "C" __declspec(dllexport) double cv_arcLength_0(void* curve, bool closed);
extern "C" __declspec(dllexport) double cv_contourArea_0(void* contour, bool oriented);
extern "C" __declspec(dllexport) cv::Rect cv_boundingRect_0(void* array);
extern "C" __declspec(dllexport) void* cv_getRotationMatrix2D_0(cv::Point2f center, double angle, double scale);
extern "C" __declspec(dllexport) void cv_invertAffineTransform_0(void* M, void* iM);
extern "C" __declspec(dllexport) void* cv_getPerspectiveTransform_0(void* src, void* dst, int solveMethod);
extern "C" __declspec(dllexport) void* cv_getAffineTransform_0(void* src, void* dst);
extern "C" __declspec(dllexport) void cv_Rodrigues_0(void* src, void* dst, void* jacobian);
extern "C" __declspec(dllexport) void* cv_findHomography_0(void* srcPoints, void* dstPoints, int method, double ransacReprojThreshold, void* mask, int maxIters, double confidence);
extern "C" __declspec(dllexport) void* cv_findHomography_1(void* srcPoints, void* dstPoints, void* mask, void* params);
extern "C" __declspec(dllexport) void* cv_RQDecomp3x3_0(void* src, void* mtxR, void* mtxQ, void* Qx, void* Qy, void* Qz);
extern "C" __declspec(dllexport) void cv_decomposeProjectionMatrix_0(void* projMatrix, void* cameraMatrix, void* rotMatrix, void* transVect, void* rotMatrixX, void* rotMatrixY, void* rotMatrixZ, void* eulerAngles);
extern "C" __declspec(dllexport) void cv_matMulDeriv_0(void* A, void* B, void* dABdA, void* dABdB);
extern "C" __declspec(dllexport) void cv_composeRT_0(void* rvec1, void* tvec1, void* rvec2, void* tvec2, void* rvec3, void* tvec3, void* dr3dr1, void* dr3dt1, void* dr3dr2, void* dr3dt2, void* dt3dr1, void* dt3dt1, void* dt3dr2, void* dt3dt2);
extern "C" __declspec(dllexport) void cv_projectPoints_0(void* objectPoints, void* rvec, void* tvec, void* cameraMatrix, void* distCoeffs, void* imagePoints, void* jacobian, double aspectRatio);
extern "C" __declspec(dllexport) void cv_projectPoints_1(void* objectPoints, void* rvec, void* tvec, void* cameraMatrix, void* distCoeffs, void* imagePoints, void* dpdr, void* dpdt, void* dpdf, void* dpdc, void* dpdk, void* dpdo, double aspectRatio);
extern "C" __declspec(dllexport) bool cv_solvePnP_0(void* objectPoints, void* imagePoints, void* cameraMatrix, void* distCoeffs, void* rvec, void* tvec, bool useExtrinsicGuess, int flags);
extern "C" __declspec(dllexport) bool cv_solvePnPRansac_0(void* objectPoints, void* imagePoints, void* cameraMatrix, void* distCoeffs, void* rvec, void* tvec, bool useExtrinsicGuess, int iterationsCount, float reprojectionError, double confidence, void* inliers, int flags);
extern "C" __declspec(dllexport) bool cv_solvePnPRansac_1(void* objectPoints, void* imagePoints, void* cameraMatrix, void* distCoeffs, void* rvec, void* tvec, void* inliers, void* params);
extern "C" __declspec(dllexport) int cv_solveP3P_0(void* objectPoints, void* imagePoints, void* cameraMatrix, void* distCoeffs, void* rvecs, void* tvecs, int flags);
extern "C" __declspec(dllexport) void cv_solvePnPRefineLM_0(void* objectPoints, void* imagePoints, void* cameraMatrix, void* distCoeffs, void* rvec, void* tvec, cv::TermCriteria criteria);
extern "C" __declspec(dllexport) void cv_solvePnPRefineVVS_0(void* objectPoints, void* imagePoints, void* cameraMatrix, void* distCoeffs, void* rvec, void* tvec, cv::TermCriteria criteria, double VVSlambda);
extern "C" __declspec(dllexport) int cv_solvePnPGeneric_0(void* objectPoints, void* imagePoints, void* cameraMatrix, void* distCoeffs, void* rvecs, void* tvecs, bool useExtrinsicGuess, int flags, void* rvec, void* tvec, void* reprojectionError);
extern "C" __declspec(dllexport) void cv_convertPointsToHomogeneous_0(void* src, void* dst, int dtype);
extern "C" __declspec(dllexport) void cv_convertPointsFromHomogeneous_0(void* src, void* dst, int dtype);
extern "C" __declspec(dllexport) void* cv_findFundamentalMat_0(void* points1, void* points2, int method, double ransacReprojThreshold, double confidence, int maxIters, void* mask);
extern "C" __declspec(dllexport) void* cv_findFundamentalMat_1(void* points1, void* points2, int method, double ransacReprojThreshold, double confidence, void* mask);
extern "C" __declspec(dllexport) void* cv_findFundamentalMat_2(void* points1, void* points2, void* mask, void* params);
extern "C" __declspec(dllexport) void* cv_findEssentialMat_0(void* points1, void* points2, void* cameraMatrix, int method, double prob, double threshold, int maxIters, void* mask);
extern "C" __declspec(dllexport) void* cv_findEssentialMat_1(void* points1, void* points2, double focal, void* pp, int method, double prob, double threshold, int maxIters, void* mask);
extern "C" __declspec(dllexport) void* cv_findEssentialMat_2(void* points1, void* points2, void* cameraMatrix1, void* distCoeffs1, void* cameraMatrix2, void* distCoeffs2, int method, double prob, double threshold, void* mask);
extern "C" __declspec(dllexport) void* cv_findEssentialMat_3(void* points1, void* points2, void* cameraMatrix1, void* cameraMatrix2, void* dist_coeff1, void* dist_coeff2, void* mask, void* params);
extern "C" __declspec(dllexport) void cv_decomposeEssentialMat_0(void* E, void* R1, void* R2, void* t);
extern "C" __declspec(dllexport) int cv_recoverPose_0(void* points1, void* points2, void* cameraMatrix1, void* distCoeffs1, void* cameraMatrix2, void* distCoeffs2, void* E, void* R, void* t, int method, double prob, double threshold, void* mask);
extern "C" __declspec(dllexport) int cv_recoverPose_1(void* E, void* points1, void* points2, void* cameraMatrix, void* R, void* t, void* mask);