src/OpenCV5Sharp/Generated/NativeMethods.Geometry.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_matchShapes_0(MatHandle contour1, MatHandle contour2, int method, double parameter);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_convexHull_0(MatHandle points, MatHandle hull, [MarshalAs(UnmanagedType.U1)] bool clockwise, [MarshalAs(UnmanagedType.U1)] bool returnPoints);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_convexityDefects_0(MatHandle contour, MatHandle convexhull, MatHandle convexityDefects);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_isContourConvex_0(MatHandle contour);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float cv_intersectConvexConvex_0(MatHandle p1, MatHandle p2, MatHandle p12, [MarshalAs(UnmanagedType.U1)] bool handleNested);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_fitEllipse_0(MatHandle points);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_fitEllipseAMS_0(MatHandle points);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_fitEllipseDirect_0(MatHandle points);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_getClosestEllipsePoints_0(RotatedRectHandle ellipse_params, MatHandle points, MatHandle closest_pts);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_fitLine_0(MatHandle points, MatHandle line, int distType, double param, double reps, double aeps);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_pointPolygonTest_0(MatHandle contour, Point2F pt, [MarshalAs(UnmanagedType.U1)] bool measureDist);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_rotatedRectangleIntersection_0(RotatedRectHandle rect1, RotatedRectHandle rect2, MatHandle intersectingRegion);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_arcLength_0(MatHandle curve, [MarshalAs(UnmanagedType.U1)] bool closed);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double cv_contourArea_0(MatHandle contour, [MarshalAs(UnmanagedType.U1)] bool oriented);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Rect cv_boundingRect_0(MatHandle array);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_getRotationMatrix2D_0(Point2F center, double angle, double scale);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_invertAffineTransform_0(MatHandle M, MatHandle iM);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_getPerspectiveTransform_0(MatHandle src, MatHandle dst, int solveMethod);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_getAffineTransform_0(MatHandle src, MatHandle dst);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_Rodrigues_0(MatHandle src, MatHandle dst, IntPtr jacobian);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_findHomography_0(MatHandle srcPoints, MatHandle dstPoints, int method, double ransacReprojThreshold, IntPtr mask, int maxIters, double confidence);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_findHomography_1(MatHandle srcPoints, MatHandle dstPoints, MatHandle mask, UsacParamsHandle @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_RQDecomp3x3_0(MatHandle src, MatHandle mtxR, MatHandle mtxQ, IntPtr Qx, IntPtr Qy, IntPtr Qz);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_decomposeProjectionMatrix_0(MatHandle projMatrix, MatHandle cameraMatrix, MatHandle rotMatrix, MatHandle transVect, IntPtr rotMatrixX, IntPtr rotMatrixY, IntPtr rotMatrixZ, IntPtr eulerAngles);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_matMulDeriv_0(MatHandle A, MatHandle B, MatHandle dABdA, MatHandle dABdB);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_composeRT_0(MatHandle rvec1, MatHandle tvec1, MatHandle rvec2, MatHandle tvec2, MatHandle rvec3, MatHandle tvec3, IntPtr dr3dr1, IntPtr dr3dt1, IntPtr dr3dr2, IntPtr dr3dt2, IntPtr dt3dr1, IntPtr dt3dt1, IntPtr dt3dr2, IntPtr dt3dt2);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_projectPoints_0(MatHandle objectPoints, MatHandle rvec, MatHandle tvec, MatHandle cameraMatrix, MatHandle distCoeffs, MatHandle imagePoints, IntPtr jacobian, double aspectRatio);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_projectPoints_1(MatHandle objectPoints, MatHandle rvec, MatHandle tvec, MatHandle cameraMatrix, MatHandle distCoeffs, MatHandle imagePoints, MatHandle dpdr, MatHandle dpdt, IntPtr dpdf, IntPtr dpdc, IntPtr dpdk, IntPtr dpdo, double aspectRatio);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_solvePnP_0(MatHandle objectPoints, MatHandle imagePoints, MatHandle cameraMatrix, MatHandle distCoeffs, MatHandle rvec, MatHandle tvec, [MarshalAs(UnmanagedType.U1)] bool useExtrinsicGuess, int flags);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_solvePnPRansac_0(MatHandle objectPoints, MatHandle imagePoints, MatHandle cameraMatrix, MatHandle distCoeffs, MatHandle rvec, MatHandle tvec, [MarshalAs(UnmanagedType.U1)] bool useExtrinsicGuess, int iterationsCount, float reprojectionError, double confidence, IntPtr inliers, int flags);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_solvePnPRansac_1(MatHandle objectPoints, MatHandle imagePoints, MatHandle cameraMatrix, MatHandle distCoeffs, MatHandle rvec, MatHandle tvec, MatHandle inliers, IntPtr @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_solveP3P_0(MatHandle objectPoints, MatHandle imagePoints, MatHandle cameraMatrix, MatHandle distCoeffs, IntPtr rvecs, IntPtr tvecs, int flags);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_solvePnPRefineLM_0(MatHandle objectPoints, MatHandle imagePoints, MatHandle cameraMatrix, MatHandle distCoeffs, MatHandle rvec, MatHandle tvec, TermCriteria criteria);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_solvePnPRefineVVS_0(MatHandle objectPoints, MatHandle imagePoints, MatHandle cameraMatrix, MatHandle distCoeffs, MatHandle rvec, MatHandle tvec, TermCriteria criteria, double VVSlambda);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_solvePnPGeneric_0(MatHandle objectPoints, MatHandle imagePoints, MatHandle cameraMatrix, MatHandle distCoeffs, IntPtr rvecs, IntPtr tvecs, [MarshalAs(UnmanagedType.U1)] bool useExtrinsicGuess, int flags, IntPtr rvec, IntPtr tvec, IntPtr reprojectionError);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_convertPointsToHomogeneous_0(MatHandle src, MatHandle dst, int dtype);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_convertPointsFromHomogeneous_0(MatHandle src, MatHandle dst, int dtype);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_findFundamentalMat_0(MatHandle points1, MatHandle points2, int method, double ransacReprojThreshold, double confidence, int maxIters, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_findFundamentalMat_1(MatHandle points1, MatHandle points2, int method, double ransacReprojThreshold, double confidence, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_findFundamentalMat_2(MatHandle points1, MatHandle points2, MatHandle mask, UsacParamsHandle @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_findEssentialMat_0(MatHandle points1, MatHandle points2, MatHandle cameraMatrix, int method, double prob, double threshold, int maxIters, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_findEssentialMat_1(MatHandle points1, MatHandle points2, double focal, IntPtr pp, int method, double prob, double threshold, int maxIters, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_findEssentialMat_2(MatHandle points1, MatHandle points2, MatHandle cameraMatrix1, MatHandle distCoeffs1, MatHandle cameraMatrix2, MatHandle distCoeffs2, int method, double prob, double threshold, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_findEssentialMat_3(MatHandle points1, MatHandle points2, MatHandle cameraMatrix1, MatHandle cameraMatrix2, MatHandle dist_coeff1, MatHandle dist_coeff2, MatHandle mask, UsacParamsHandle @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_decomposeEssentialMat_0(MatHandle E, MatHandle R1, MatHandle R2, MatHandle t);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_recoverPose_0(MatHandle points1, MatHandle points2, MatHandle cameraMatrix1, MatHandle distCoeffs1, MatHandle cameraMatrix2, MatHandle distCoeffs2, MatHandle E, MatHandle R, MatHandle t, int method, double prob, double threshold, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int cv_recoverPose_1(MatHandle E, MatHandle points1, MatHandle points2, MatHandle cameraMatrix, MatHandle R, MatHandle t, IntPtr mask);
